fix: logo on mobile

--- a/app/themes/hunger-tv/assets/styles/components/logo.scss
+++ b/app/themes/hunger-tv/assets/styles/components/logo.scss
@@ -7,3 +7,9 @@
 		height: 100%;
 	}
 }
+
+@media (min-width: $md-min) {
+	.home .logo {
+		display: none;
+	}
+}
